working with tanstack start

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-router-devtools": "^1.131.42",
     "@tanstack/react-start": "^1.131.43",
     "@upstash/workflow": "^0.2.19",
+    "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
