add more example

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "upstashworkflow": "npx @upstash/qstash-cli dev",
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
     "start": "node .output/server/index.mjs"
